fix layout issues

--- a/Assignment2/css/styles.css
+++ b/Assignment2/css/styles.css
@@ -202,23 +202,9 @@ p strong {
 
 .compact-pair .inner-card {
     margin: 10px;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
 }
 .compact-pair .card {
     margin: 8px;
-}
-
-.compact-pair {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.compact-pair .pure-u-md-1-2 {
-    display: flex;
-    flex-direction: column;
 }
 
 .stacked-pair {
